--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,17 @@ appdirs==1.4.4
 appnope==0.1.4
 asttokens==2.4.1
 attrs==23.1.0
+audioread==3.0.1
 Bottleneck==1.3.7
 Brotli==1.0.9
 certifi==2024.6.2
+cffi==1.16.0
 charset-normalizer==2.0.4
 click==8.1.7
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
-datasets==2.19.1
+datasets==2.20.0
 debugpy==1.6.7
 decorator==5.1.1
 dill==0.3.8
@@ -33,11 +35,15 @@ ipykernel==6.29.4
 ipython==8.25.0
 jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.4.2
 jupyter_client==8.6.2
 jupyter_core==5.5.0
 kiwisolver==1.4.5
+lazy_loader==0.4
+librosa==0.10.2.post1
 lightning==2.2.5
 lightning-utilities==0.11.2
+llvmlite==0.43.0
 MarkupSafe==2.1.3
 matplotlib==3.9.0
 matplotlib-inline==0.1.7
@@ -45,10 +51,12 @@ mkl-fft==1.3.8
 mkl-random==1.2.4
 mkl-service==2.4.0
 mpmath==1.3.0
+msgpack==1.0.8
 multidict==6.0.4
 multiprocess==0.70.15
 nest_asyncio==1.6.0
 networkx==3.2.1
+numba==0.60.0
 numexpr==2.8.7
 numpy==1.26.4
 opencv-python==4.10.0
@@ -63,12 +71,15 @@ pickleshare==0.7.5
 pillow==10.3.0
 pip==24.0
 platformdirs==4.2.2
+pooch==1.8.2
 prompt_toolkit==3.0.46
 protobuf==4.25.3
 psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==16.1.0
+pyarrow-hotfix==0.6
+pycparser==2.22
 Pygments==2.18.0
 pyparsing==3.1.2
 PySocks==1.7.1
@@ -80,13 +91,18 @@ pyzmq==25.1.2
 regex==2023.10.3
 requests==2.32.2
 safetensors==0.4.0
+scikit-learn==1.5.0
+scipy==1.14.0
 sentry-sdk==2.5.0
 setproctitle==1.2.2
 setuptools==69.5.1
 six==1.16.0
 smmap==5.0.0
+soundfile==0.12.1
+soxr==0.3.7
 stack-data==0.6.2
 sympy==1.12
+threadpoolctl==3.5.0
 tiktoken==0.7.0
 tokenizers==0.15.1
 torch==2.2.2
